add feature playing quiz